Added Tests using Espresso to perform UI Checks.
Testing that the retry button is displayed when a 404 error is received
from the service.

--- a/RetrofitTestExample/app/src/main/res/layout/activity_main.xml
+++ b/RetrofitTestExample/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,16 @@
     <TextView
         android:id="@+id/text_view_quote"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retry"
+        android:id="@+id/button_retry"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_below="@+id/text_view_quote"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
